src/test/deca/context/invalid/improvided/op_un_not.deca
{
   // Description:
   //   Test du not unaire avec un type incompatible.
   //
   // Résultats:
   //   Erreur Contextuelle
   //   Ligne 7: The unary operation (Not) cannot be done due to the given type. 
   boolean x = !3;
}
